# STS1_sensor_libraries

./: .buildinfo  .gitignore  ADXL345.html  CONTRIBUTING.md  README.md  genindex.html  index.html  justfile  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.doctrees/: ADXL345.doctree  environment.pickle  index.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/sts1_sensors/: index.doctree
.github/workflows/: doc.yml  publish.yml
STS1_sensor_libraries/: .ADXL345.py.swp  ADXL345.py  BME688.py  BMM150.py  GUVA_C32.py  L3GD20H.py  TMP112.py  main.py
STS1_sensor_libraries.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
_sources/: index.rst.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/sts1_sensors/: index.rst.txt
_static/: documentation_options.js
autoapi/: index.html
autoapi/sts1_sensors/: index.html
autoapi/sts1_sensors/edu/: index.html
autoapi/sts1_sensors/main/: index.html
autoapi/sts1_sensors/nonedu/: index.html
autoapi/sts1_sensors/sensors/: index.html
autoapi/sts1_sensors/utils/: index.html
docs/source/: ADXL345.md  conf.py  index.rst
examples/: .ADXL345Example.py.swp  ADXL345Example.py  ADXL345Offset.py  ADXL345_example.py  BME688.py  BMM150.py  BMM150Example.py  L3GD20H.py  L3GD20HExample.py  SATDOS3Example.py  TMP112Example.py  TMP112_example.py  allSensors.py  calibration_example.py  raspiHat.py  test.py  testtest.py
examples/edu/: ADXL345.py  ADXL345_calibration.py  BME688.py  L3GD20H.py  TMP112.py  all_sensors.py  cam.py
src/sts1_sensor_libraries/: ADXL345.py  ADXL345_new.py  ADXL345_old.py  GUVA_C32.py  TMP112.py  __init__.py
src/sts1_sensor_libraries/sensors/: ADXL345.py  TMP112.py  __init__.py
src/sts1_sensors/: __init__.py
src/sts1_sensors/edu/: ADXL345.py  BME688.py  BMM150.py  L3GD20H.py  TMP112.py  __init__.py  cam.py  legacy.py  pysatdosclient.py
src/sts1_sensors/nonedu/: GUVA_C32.py  __init__.py
src/sts1_sensors/sensors/: ADXL345.py  AbstractSensor.py  BME688.py  BMM150.py  GUVA_C32.py  L3GD20H.py  TMP112.py  __init__.py
tests/: test_ADXL345.py  test_BME688.py  test_BMM150.py  test_L3GD20H.py  test_TMP112.py
(+64 files in other folders)
