[project]
name = "sts1_sensor_libraries"
version = "0.3.0"
description = "A sensor library for the CubeSat STS1 (TU Wien Space Team)."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.3.4",
    "smbus2>=0.5.0",
    "structlog>=24.4.0",
]
authors = [
  {name = "Simon Köfinger", email = "simon.koefinger@spaceteam.at"},
  {name = "Florian Rohrer", email = "florian.rohrer@spaceteam.at"},
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
