[project]
name = "sts1_sensors"
version = "0.3.5"
description = "A sensor library for the CubeSat STS1 (TU Wien Space Team)."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "bme680>=2.0.0",
    "bmm150>=0.2.2",
    "smbus2>=0.4.2,<0.5.0",
    "structlog>=24.4.0",
]
authors = [
  {name = "Simon Köfinger", email = "simon.koefinger@spaceteam.at"},
  {name = "Florian Rohrer", email = "florian.rohrer@spaceteam.at"},
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "furo>=2024.8.6",
    "myst-parser>=4.0.0",
    "pytest>=8.3.4",
    "sphinx-autoapi>=3.4.0",
    "sphinx-autobuild>=2024.10.3",
    "sphinx>=8.1.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sts1_sensors"]
